--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/helloworld/helloworld.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/helloworld/helloworld.html
@@ -13,14 +13,71 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
-<div class="cmp-helloworld" data-cmp-is="helloworld">
+<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
+     data-sly-call="${clientlib.all @ categories='wknd.myfirstcomponentclientlib'}"></sly>
+
+<div class="cmp-helloworld cmp-helloworld__border" data-cmp-is="helloworld"
+     data-sly-use.model="com.adobe.aem.guides.wknd.core.models.HelloWorldModel">
     <h2 class="cmp-helloworld__title">Hello World Component</h2>
+
+    <sly data-sly-test="${wcmmode.edit}">
+        <div>In edit mode</div>
+    </sly>
+
+    <sly data-sly-test="${!wcmmode.edit}">
+        <div>Not in edit mode</div>
+    </sly>
+
+    <sly data-sly-test="${wcmmode.edit}"
+         data-sly-resource="${'my-par' @resourceType='wcm/foundation/components/parsys'}"></sly>
+    <div class="cmp-helloworld__background"></div>
     <div class="cmp-helloworld__item" data-sly-test="${properties.text}">
         <p class="cmp-helloworld__item-label">Text property:</p>
         <pre class="cmp-helloworld__item-output" data-cmp-hook-helloworld="property">${properties.text}</pre>
     </div>
-    <div class="cmp-helloworld__item" data-sly-use.model="com.adobe.aem.guides.wknd.core.models.HelloWorldModel" data-sly-test="${model.message}">
+    <div class="cmp-helloworld__item" data-sly-test="${model.message}">
         <p class="cmp-helloworld__item-label">Model message:</p>
-        <pre class="cmp-helloworld__item-output"data-cmp-hook-helloworld="model">${model.message}</pre>
+        <pre class="cmp-helloworld__item-output" data-cmp-hook-helloworld="model">${model.message}</pre>
     </div>
+    <div class="cmp-helloworld__item">
+        <sly data-sly-set.myFunctionName="myFunction(${model.message})"></sly>
+        <sly data-sly-set.colorName="red"></sly>
+        <a href="#" style="color: ${colorName @ context='styleToken'}"
+           onclick="${@context='scriptToken'}myFunction('${model.message @ context='scriptString'}')">CLICK HERE</a>
+    </div>
+    <div class="cmp-helloworld__item">
+        <sly data-sly-set.time="${properties['jcr:created']}"></sly>
+        <p class="cmp-helloworld__item-label">jcr:created date is:</p>
+        <pre class="cmp-helloworld__item-output">${properties['jcr:createdBy']} at ${'yyyy-MM-dd' @ format=time}</pre>
+    </div>
+    <div class="cmp-helloworld__item">
+        <sly data-sly-set.timeWora="${properties['jcr:lastModified']}"></sly>
+        <p class="cmp-helloworld__item-label">jcr:lastModified date is:</p>
+        <pre class="cmp-helloworld__item-output">${properties['jcr:lastModifiedBy']} at ${'yyyy-MM-dd hh:mm' @ format=timeWora}</pre>
+    </div>
+    <div class="cmp-helloworld__item">
+        <p data-sly-element="${'h3'}" class="cmp-helloworld__item-label">${'Add Details' @i18n,locale='it'}</p>
+    </div>
+    <div class="cmp-helloworld__navigation">
+        <ul>
+            <sly data-sly-list.childPage="${currentPage.listChildren}">
+                <li>
+                    <a href="${childPage.path}.html">${childPage.pageTitle ? childPage.pageTitle : childPage.name}</a>
+                </li>
+            </sly>
+        </ul>
+    </div>
+    <sly data-sly-call="${myTemplate @ text='The resource', res=resource}"></sly>
+    <template data-sly-template.myTemplate="${@ text, res}">
+        <div class="resource-info" data-sly-unwrap="${wcmmode.disabled}">
+            <p>${[text,res.name] @join=' name is: '}</p>
+            <p>${'{0}{1}{2}'@format=[text,' path is: ', res.path]}</p>
+        </div>
+    </template>
 </div>
+
+<script>
+    function myFunction(message) {
+        alert(message);
+    }
+</script>
