--- a/ui.apps/src/main/content/jcr_root/apps/wknd/components/page/customfooterlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/wknd/components/page/customfooterlibs.html
@@ -13,3 +13,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
+<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
+     data-sly-call="${clientlib.js @ categories='wknd.vendors'}"></sly>
+<sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"
+     data-sly-call="${clientlib.js @ categories='wknd.myfirstpageclientlib'}"></sly>
